crate ProductImage
create Product.java